--- a/src/theme/dark.qss
+++ b/src/theme/dark.qss
@@ -316,10 +316,9 @@ QGroupBox::indicator{
     height:0px;
 }
 QGroupBox::title {
-
     background-color: qlineargradient(spread:reflect, x1:0, y1:1, x2:0, y2:0, stop:0 rgba(17, 18, 20, 240), stop:0.5 rgba(17, 18, 20, 96), stop:1 rgba(17, 18, 20, 240));
     border: none;
-    margin-left:-10px;
+    margin-left:-10px; /* to hide indicator*/
 }
 
 
